--- a/examples/testing.html
+++ b/examples/testing.html
@@ -137,8 +137,8 @@
             .model([ //Data Model
                 {
                     key: 'id',
-                    type: 'uuid',
-                    props: ['pk']
+                    type: 'timeIdms',
+                    props: ['pk', "ai"]
                 }, {
                     key: 'name',
                     type: 'string',
@@ -273,6 +273,9 @@
                         }
                     }])
                 ]).then(function() {
+                    nSQL("users").query("select-range", [2, 0]).exec().then((rows) => {
+                        console.log("RANGE", rows);
+                    })
                     nSQL("orders").query("select").where(["id", "BETWEEN", [1, 2]]).exec().then((rows) => {
                         console.log("BETWEEN", rows);
                     });
