--- a/examples/react-todo/index.html
+++ b/examples/react-todo/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.4/milligram.min.css" />
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.4/milligram.min.css" />-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.22/css/uikit.min.css" />
     <script data-main="/react-todo/index.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>
     <script>
         require.config({
@@ -15,10 +16,6 @@
         require(["index", "react", "react-dom", "nano-sql"], function(app) {})
     </script>
     <style>
-        body .container {
-            max-width: 60rem;
-        }
-        
         .noselect {
             user-select: none;
             -webkit-user-select: none;
